--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/" />
-  <base href="/dock_app/" />
+  <base href=""/>
+  <base href="/dock_app/"/>
 
 
   <meta charset="UTF-8">
